--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   ],
   "devEngines": {
     "node": "12.x || 13.x || 14.x || 15.x"
+  },
+  "name": "setitheme",
+  "devDependencies": {
+    "lerna": "^3.22.1"
   }
 }
