--- a/packages/icons/tsconfig.json
+++ b/packages/icons/tsconfig.json
@@ -11,7 +11,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
   },
-  "include": ["src/**/*"],
+  "include": ["tests/**/*"],
   "exclude": [
     "node_modules",
     "build",
