--- a/package.json
+++ b/package.json
@@ -9,7 +9,18 @@
     "node": "12.x || 13.x || 14.x || 15.x"
   },
   "name": "setitheme",
+  "scripts": {
+    "lint": "pretty-quick --check --bail --pattern \"**/*.*(js|jsx|ts|tsx)\"",
+    "lint:fix": "pretty-quick --pattern \"**/*.*(js|jsx|ts|tsx)\""
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
+  },
   "devDependencies": {
-    "lerna": "^3.22.1"
+    "lerna": "^3.22.1",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0"
   }
 }
