--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,8 +23,8 @@
   ],
   "scripts": {
     "build": "rollup -c",
-    "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "lint": "prettier --check \"src/**/*.{js,jsx}\"",
+    "lint": "pretty-quick --check --pattern \"**/*.*(js|jsx|ts|tsx)\"",
+    "lint:fix": "pretty-quick --pattern \"**/*.*(js|jsx|ts|tsx)\"",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -35,25 +35,23 @@
     "seti core",
     "seti config"
   ],
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged && npm run lint"
-    }
-  },
   "resolutions": {
     "styled-components": "^5"
   },
   "devDependencies": {
     "@types/jest": "^26.0.19",
+    "add": "^2.0.6",
     "chai": "^4.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
     "rollup": "^2.35.1",
     "rollup-plugin-scss": "^2.6.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.29.0",
     "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "yarn": "^1.22.10"
   }
 }
