--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -38,13 +38,8 @@
     "dev:server": "npm run http-server dist -p 3000",
     "test": "jest",
     "test:watch": "jest --watch",
-    "format": "prettier --write \"src/**/*.{js,jsx,tsx}\" --loglevel debug",
-    "lint": "prettier --check \"src/**/*.{js,jsx,tsx}\""
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged && npm run lint"
-    }
+    "lint": "pretty-quick --check --pattern \"**/*.*(js|jsx|ts|tsx)\"",
+    "lint:fix": "pretty-quick --pattern \"**/*.*(js|jsx|ts|tsx)\""
   },
   "resolutions": {
     "styled-components": "^5"
@@ -64,6 +59,7 @@
     "@types/jest": "^26.0.19",
     "@types/react": "^17.0.0",
     "@web/test-runner": "^0.11.7",
+    "add": "^2.0.6",
     "babel-jest": "^26.6.3",
     "babel-plugin-styled-components": "^1.12.0",
     "chai": "^4.2.0",
@@ -74,6 +70,7 @@
     "jest": "^26.6.3",
     "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -81,6 +78,7 @@
     "snowpack": "^2.18.5",
     "styled-components": "^5.2.1",
     "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "yarn": "^1.22.10"
   }
 }
