--- a/website/package.json
+++ b/website/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "lint": "eslint --ext .js,.jsx.ts,.tsx",
+    "lint": "pretty-quick --check --pattern \"**/*.*(js|jsx|ts|tsx)\"",
+    "lint:fix": "pretty-quick --pattern \"**/*.*(js|jsx|ts|tsx)\"",
     "start": "next start"
   },
   "husky": {
