--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "name": "setitheme",
   "scripts": {
     "lint": "pretty-quick --check --bail --pattern \"**/*.*(js|jsx|ts|tsx)\"",
-    "lint:fix": "pretty-quick --pattern \"**/*.*(js|jsx|ts|tsx)\""
+    "lint:fix": "pretty-quick --pattern \"**/*.*(js|jsx|ts|tsx)\"",
+    "lint:markdown": "remark . -c "
   },
   "husky": {
     "hooks": {
@@ -19,8 +20,23 @@
     }
   },
   "devDependencies": {
+    "dictionary-en": "^3.0.1",
     "lerna": "^3.22.1",
     "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0"
+    "pretty-quick": "^3.1.0",
+    "remark-cli": "^9.0.0",
+    "remark-frontmatter": "^3.0.0",
+    "remark-lint": "^8.0.0",
+    "remark-preset-lint-consistent": "^4.0.0",
+    "remark-preset-lint-markdown-style-guide": "^4.0.0",
+    "remark-preset-lint-recommended": "^5.0.0",
+    "remark-retext": "^4.0.0",
+    "retext-english": "^3.0.4",
+    "retext-repeated-words": "^3.0.0",
+    "retext-sentence-spacing": "^4.0.0",
+    "retext-spell": "^4.0.0",
+    "retext-syntax-urls": "^2.0.0",
+    "retext-usage": "^0.5.0",
+    "unified": "^9.2.0"
   }
 }
