--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -43,6 +43,8 @@
     "@types/jest": "^26.0.19",
     "add": "^2.0.6",
     "chai": "^4.2.0",
+    "dictionary-en": "^3.0.1",
+    "dictionary-en-us": "^3.0.0",
     "eslint": "^7.17.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.0",
@@ -50,6 +52,18 @@
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
+    "remark-frontmatter": "^3.0.0",
+    "remark-lint": "^8.0.0",
+    "remark-preset-lint-consistent": "^4.0.0",
+    "remark-preset-lint-markdown-style-guide": "^4.0.0",
+    "remark-preset-lint-recommended": "^5.0.0",
+    "remark-retext": "^4.0.0",
+    "retext-english": "^3.0.4",
+    "retext-repeated-words": "^3.0.0",
+    "retext-sentence-spacing": "^4.0.0",
+    "retext-spell": "^4.0.0",
+    "retext-syntax-urls": "^2.0.0",
+    "retext-usage": "^0.5.0",
     "rollup": "^2.35.1",
     "rollup-plugin-scss": "^2.6.1",
     "rollup-plugin-terser": "^7.0.2",
@@ -59,6 +73,7 @@
     "stylelint-config-standard": "^20.0.0",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
+    "unified": "^9.2.0",
     "yarn": "^1.22.10"
   }
 }
