--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -48,6 +48,7 @@
     "@setitheme/core": "file:../core"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@snowpack/plugin-dotenv": "^2.0.5",
@@ -64,6 +65,8 @@
     "babel-plugin-styled-components": "^1.12.0",
     "chai": "^4.2.0",
     "commander": "^6.2.1",
+    "dictionary-en": "^3.0.1",
+    "dictionary-en-us": "^3.0.0",
     "eslint": "^7.17.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.0",
@@ -78,6 +81,19 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-test-renderer": "^17.0.1",
+    "remark-frontmatter": "^3.0.0",
+    "remark-lint": "^8.0.0",
+    "remark-preset-lint-consistent": "^4.0.0",
+    "remark-preset-lint-markdown-style-guide": "^4.0.0",
+    "remark-preset-lint-recommended": "^5.0.0",
+    "remark-retext": "^4.0.0",
+    "retext-english": "^3.0.4",
+    "retext-repeated-words": "^3.0.0",
+    "retext-sentence-spacing": "^4.0.0",
+    "retext-spell": "^4.0.0",
+    "retext-syntax-urls": "^2.0.0",
+    "retext-usage": "^0.5.0",
+    "rollup": "^2.35.1",
     "snowpack": "^2.18.5",
     "styled-components": "^5.2.1",
     "stylelint": "^13.8.0",
@@ -85,6 +101,8 @@
     "stylelint-config-standard": "^20.0.0",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
+    "unified": "^9.2.0",
+    "vue": "^2.6.12",
     "yarn": "^1.22.10"
   }
 }
