--- a/lerna.json
+++ b/lerna.json
@@ -1,13 +1,7 @@
 {
-  "version": "0.1.0",
-  "lerna": "3.22.1",
+  "version": "independent",
   "useWorkspaces": true,
   "npmClient": "yarn",
-  "packages": [
-    "packages/*"
-  ],
-  "workspaces": [
-    "packages/*",
-    "website/*"
-  ]
+  "packages": ["packages/*"],
+  "workspaces": ["packages/*", "website/*"]
 }
