--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -51,7 +51,6 @@
     "@snowpack/plugin-dotenv": "^2.0.5",
     "@snowpack/plugin-react-refresh": "^2.3.9",
     "@snowpack/plugin-sass": "^1.2.0",
-    "@snowpack/plugin-vue": "^2.2.6",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@types/jest": "^26.0.19",
@@ -76,19 +75,8 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-is": "^17.0.1",
     "react-test-renderer": "^17.0.1",
-    "remark-frontmatter": "^3.0.0",
-    "remark-lint": "^8.0.0",
-    "remark-preset-lint-consistent": "^4.0.0",
-    "remark-preset-lint-markdown-style-guide": "^4.0.0",
-    "remark-preset-lint-recommended": "^5.0.0",
-    "remark-retext": "^4.0.0",
-    "retext-english": "^3.0.4",
-    "retext-repeated-words": "^3.0.0",
-    "retext-sentence-spacing": "^4.0.0",
-    "retext-spell": "^4.0.0",
-    "retext-syntax-urls": "^2.0.0",
-    "retext-usage": "^0.5.0",
     "rollup": "^2.35.1",
     "snowpack": "^2.18.5",
     "styled-components": "^5.2.1",
@@ -97,7 +85,6 @@
     "stylelint-config-standard": "^20.0.0",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
-    "unified": "^9.2.0",
     "vue": "^2.6.12",
     "yarn": "^1.22.10"
   }
