--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -48,6 +48,7 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@setitheme/core": "0.1.0-alpha.0",
     "@snowpack/plugin-dotenv": "^2.0.5",
     "@snowpack/plugin-react-refresh": "^2.3.9",
     "@snowpack/plugin-sass": "^1.2.0",
