update publish scripts

--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   "scripts": {
     "lint": "pretty-quick --check --bail --pattern \"**/*.*(js|jsx|ts|tsx)\"",
     "lint:fix": "pretty-quick --pattern \"**/*.*(js|jsx|ts|tsx)\"",
-    "publish:alpha": "lerna publish --canary --access public --dist-tag beta",
-    "publish:beta": "lerna publish --access public --dist-tag beta",
-    "publish:prod": "lerna publish --access public --dist-tag latest"
+    "publish:alpha": "lerna publish --canary --dist-tag beta",
+    "publish:beta": "lerna publish --dist-tag beta",
+    "publish:prod": "lerna publish --dist-tag latest"
   },
   "husky": {
     "hooks": {
