move settings to right spot

--- a/lerna.json
+++ b/lerna.json
@@ -3,8 +3,5 @@
   "useWorkspaces": true,
   "npmClient": "yarn",
   "packages": ["packages/*"],
-  "workspaces": ["packages/*", "website/*"],
-  "publishConfig": {
-    "access": "public"
-  }
+  "workspaces": ["packages/*", "website/*"]
 }
