--- a/website/package.json
+++ b/website/package.json
@@ -20,6 +20,7 @@
     }
   },
   "dependencies": {
+    "@setitheme/icons": "0.1.0-alpha.32",
     "autoprefixer": "^10.0.4",
     "highlight.js": "^10.5.0",
     "next": "10.0.3",
