--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,8 +26,7 @@
     "url": "https://github.com/setitheme/core/issues"
   },
   "engines": {
-    "node": ">12.0.0",
-    "npm": ">6.9.0"
+    "node": ">=12.x"
   },
   "files": [
     "dist"
