--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -47,7 +47,7 @@
     "styled-components": "^5"
   },
   "dependencies": {
-    "@setitheme/core": "0.1.0-alpha.33"
+    "@setitheme/core": "^0.1.0-alpha.32"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
