--- a/website/package.json
+++ b/website/package.json
@@ -19,6 +19,7 @@
     }
   },
   "dependencies": {
+    "@setitheme/core": "0.1.1-alpha.0",
     "@setitheme/icons": "0.1.1-alpha.0",
     "autoprefixer": "^10.0.4",
     "highlight.js": "^10.5.0",
