--- a/package.json
+++ b/package.json
@@ -31,8 +31,14 @@
   },
   "devDependencies": {
     "@frosti/asguard": "^0.2.2",
+    "@octokit/core": "^3.2.5",
+    "colors": "1.3.x",
+    "depcheck": "^0.8.x",
     "dictionary-en": "^3.0.1",
+    "figlet": "^1.2.x",
     "lerna": "^3.22.1",
+    "minimist": "^1.2.x",
+    "node-emoji": "^1.10.x",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0"
   }
