--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -45,7 +45,7 @@
     "icons"
   ],
   "resolutions": {
-    "styled-components": "^5"
+    "ecstatic": "^4.1.4"
   },
   "dependencies": {
     "@setitheme/core": "^0.1.1-alpha.0"
@@ -64,7 +64,6 @@
     "@web/test-runner": "^0.12.7",
     "add": "^2.0.6",
     "babel-jest": "^26.6.3",
-    "babel-plugin-styled-components": "^1.12.0",
     "chai": "^4.2.0",
     "commander": "^7.0.0",
     "dictionary-en": "^3.0.1",
@@ -85,7 +84,6 @@
     "react-test-renderer": "^17.0.1",
     "rollup": "^2.35.1",
     "snowpack": "^3.0.11",
-    "styled-components": "^5.2.1",
     "stylelint": "^13.8.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
